deployment-elastic.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic-deployment
  namespace: stack-elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
        - name: elastic
          image: docker.elastic.co/elasticsearch/elasticsearch:8.11.3
          ports:
          - containerPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  type: NodePort
  selector:
    app: elastic
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      nodePort: 30920
