deployment-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service-grafana
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
  - name: grafa-port
    port: 3000
    nodePort: 30300
