deployment-kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.11.3
          ports:
          - containerPort: 5601
          resources:
            limits:
              memory: "1G"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "256Mi"
      
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  type: NodePort
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
      nodePort: 30560
