deployment-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      nodeName: workstation
      containers:
      - name: prometheus
        #image: docker.arvancloud.ir/prom/prometheus
        image: 192.168.154.128:5000/prometheus
        ports:
        - containerPort: 9090
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "256m"
        volumeMounts:
        - name: config
          mountPath: /etc/prometheus/prometheus.yml
          subPath: "prometheus.yml"
      volumes:
      - name: config
        configMap:
          name: configmap-prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: service-prometheus
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
  - name: prom-port
    port: 9090
    nodePort: 30909
