deployment-sqlexporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-exporter
  template:
    metadata:
      labels:
        app: mysql-exporter
    spec:
      containers:
        - name: mysql
          image: 192.168.154.128:5000/mysql
        - name: mysql-exporter
          image: 192.168.154.128:5000/prom/mysqld-exporter
          args: ["--config.my-cnf=/home/.my.cnf"]
          volumeMounts:
          - name: config
            mountPath: /home
      volumes:
        - name: config
          configMap:
            name: mysql-exporter-config
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-exporter-service
spec:
  type: NodePort
  selector:
    app: mysql-exporter
  ports:
  - port: 9104
    nodePort: 30910
