statefulset-elastic.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
        - name: elastic
          #image: docker.elastic.co/elasticsearch/elasticsearch:8.11.3
          image: 192.168.154.128:5000/elastic
          ports:
          - containerPort: 9200
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "256m"
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  type: NodePort
  selector:
    app: elastic
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      nodePort: 30920
